k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python-deployment
  namespace: irysan
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python
        image: hello-python:local
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
