k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
  namespace: irysan
spec:
  type: LoadBalancer
  selector:
    app: hello-python
  ports:
  - port: 80
    targetPort: 5000
